# 11GNU

./: README.md  configure.ac
src/: Makefile.am  \  a.out  code.c  plot.gpl  script.sh
