AC_INIT
AC_CONFIG_SRCDIR([src/code.c])

PACKAGE=gnucode
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

INTI_REQUIRED_VERSION=1.0.7
PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_SUBST([CC])

AC_PROG_CXX
AC_PROC_CC([icc gcc])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
