AC_PREREQ([2.72])
AC_INIT([gnucode], [0.1.0])
AC_CONFIG_SRCDIR([src/code.c])
AM_INIT_AUTOMAKE

AC_PROG_CC

AC_CHECK_HEADERS([fcntl.h stdint.h unistd.h])

AC_CHECK_HEADER_STDBOOL
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

AC_CHECK_FUNCS([strdup])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
